--- a/estilos.css
+++ b/estilos.css
@@ -24,6 +24,7 @@ header h1{
 }
 
 section article {
+    transition: box-shadow 0.3s ease;
     background-color: #efefef;
     margin: 1rem 0;
     border-radius: 0.5rem;
@@ -36,4 +37,28 @@ section article:hover{
 
 section article h2, section article p{
 margin: 1rem;
+}
+
+footer{
+    background-color: black;
+    padding: 3rem;
+    color: white;
+}
+
+footer section{
+    float: right;
+}
+
+footer p{
+    margin: 0px;
+}
+
+footer a{
+    color: white;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+footer a:hover{
+    color: cornflowerblue
 }
